--- a/WPF 18/MainWindow.xaml
+++ b/WPF 18/MainWindow.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_18"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="400" Width="400">
     <Grid>
         <Viewport3D>
             <Viewport3D.Camera>
-                <PerspectiveCamera LookDirection="1 -2 -5" Position="-1 2 5"/>
+                <PerspectiveCamera Position="-1 2 5" LookDirection="2 -2 -6"/>
             </Viewport3D.Camera>
 
             <ModelVisual3D>
                 <ModelVisual3D.Content>
-                            <DirectionalLight Color="White" Direction="-2,-3, 1"/>
+                            <DirectionalLight Color="White" Direction="-2,-3, -2"/>
                 </ModelVisual3D.Content>
             </ModelVisual3D>
 
@@ -23,21 +23,11 @@
                     <GeometryModel3D>
                         <GeometryModel3D.Geometry>
                                     <MeshGeometry3D
-                                Positions="0 0 0  1 0 0  0 1 0  1 1 0
-                                        0 0 0  0 0 1  0 1 0  0 1 1
-                                        0 0 0  1 0 0  0 0 1  1 0 1 
-                                        1 0 0  1 1 1  1 0 1  1 1 0
-                                        0 0 1  1 0 1  0 1 1  1 1 1 
-                                        0 1 0  0 1 1  1 1 0  1 1 1"
-                                TriangleIndices="0 2 1 1 2 3
-                                        4 5 6 6 5 7
-                                        8 9 10 9 11 10
-                                        12 13 14 12 15 13
-                                        16 17 18 19 18 17
-                                        20 21 22 22 21 23"/>
+                                Positions="0 0 0  1 0 0  0 0 1 1 0 1"
+                                TriangleIndices="0 2 1 1 2 3"/>
                         </GeometryModel3D.Geometry>
                         <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Red"/>
+                                    <DiffuseMaterial Brush="Blue"/>
                         </GeometryModel3D.Material>
                     </GeometryModel3D>
                 </ModelVisual3D.Content>
